--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
+    "multer": "^1.4.1",
     "nunjucks": "^3.2.0",
     "pg": "^7.10.0",
     "sequelize": "^5.7.4"
